Write out only first two SQL errors not to overflow the .xsession-errors

BUG:364525